[tool.poetry]
name = "tkx-ticket-analysis"
version = "0.1.0"
description = ""
authors = ["CrazySwami <Crazyswami13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
pandas = "^2.2.2"
plotly = "^5.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
